--- a/index.html
+++ b/index.html
@@ -1,41 +1,72 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="styles.css"/>
-<head><title>Hotel</title></head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+
+  </html> 
+
+<head>
+        <title>Hotel</title>
+</head>
+
+
 <body>
-    
-     <h1 id="tial">Our Menu</h1>
-    <div class="card_1"> 
-     <div class="head_1">Paneer</div>
-     <div class="boxer">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Sit nostrum iste sed asperiores 
-        in cumque iusto! Sunt ipsam aspernatur dolore explicabo, 
-        unde quam magni cum? Lorem ipsum dolor sit amet. 
-        Lorem ipsum, dolor sit amet consectetur adipisicing. 
-        </p>
-</div>
-</div>
-<div class="card_2">
-<div class="head_2">Chicken</div>
-     <div class="boxer">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Sit nostrum iste sed asperiores 
-        in cumque iusto! Sunt ipsam aspernatur dolore explicabo, 
-        unde quam magni cum? Lorem ipsum dolor sit amet. 
-        Lorem ipsum, dolor sit amet consectetur adipisicing. 
-        </p>
-</div></div>
-<div class="card_3">
-<div class="head_3">Sushi</div>
-     <div class="boxer">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Sit nostrum iste sed asperiores 
-        in cumque iusto! Sunt ipsam aspernatur dolore explicabo, 
-        unde quam magni cum? Lorem ipsum dolor sit amet. 
-        Lorem ipsum, dolor sit amet consectetur adipisicing. 
-        </p>
-</div>
-</div>
+        <nav class="navbar navbar-expand-sm bg-light justify-content-center">
+
+                <div class="container-fluid">
+                  <!-- Links -->
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link 1</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link 2</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link 3</a>
+                    </li>
+                  </ul>
+                </div>
+              
+              </nav>
+
+        <h1 id="tial">Our Menu</h1>
+        <div class="card_1">
+                <div class="head_1">Paneer</div>
+                <div class="boxer">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Sit nostrum iste sed asperiores
+                                in cumque iusto! Sunt ipsam aspernatur dolore explicabo,
+                                unde quam magni cum? Lorem ipsum dolor sit amet.
+                                Lorem ipsum, dolor sit amet consectetur adipisicing.
+                        </p>
+                </div>
+        </div>
+        <div class="card_2">
+                <div class="head_2">Chicken</div>
+                <div class="boxer">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Sit nostrum iste sed asperiores
+                                in cumque iusto! Sunt ipsam aspernatur dolore explicabo,
+                                unde quam magni cum? Lorem ipsum dolor sit amet.
+                                Lorem ipsum, dolor sit amet consectetur adipisicing.
+                        </p>
+                </div>
+        </div>
+        <div class="card_3">
+                <div class="head_3">Sushi</div>
+                <div class="boxer">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Sit nostrum iste sed asperiores
+                                in cumque iusto! Sunt ipsam aspernatur dolore explicabo,
+                                unde quam magni cum? Lorem ipsum dolor sit amet.
+                                Lorem ipsum, dolor sit amet consectetur adipisicing.
+                        </p>
+                </div>
+        </div>
 </body>
+
 </html>
